# rc

./: .gitignore  CMakeLists.txt  README.md  client.c  clienteTCP.c  clienteUDP.c  listener.c  mensagem.h  orquestradorUDP.c  sender.c  server.c  servidor.c  servidorTCP.c  servidorUDP.c
orquestrador/: CMakeLists.txt  listener.c  listenerCliente.c  listenerServidor.c  sender.c  senderOrquestrador.c
orquestrador/arquivado/: CMakeLists.txt  listener.c  sender.c
